# dify-chatgpt-codex-plugin

./: .difyignore  README.md  manifest.yaml  pyproject.toml  requirements.txt
models/: common_chatgpt_codex.py
models/llm/: _position.yaml  gpt-5.1-codex-max.yaml  gpt-5.1-codex-mini.yaml  gpt-5.1-codex.yaml  gpt-5.2-codex.yaml  gpt-5.2.yaml  gpt-5.3-codex.yaml  gpt-5.4-mini.yaml  gpt-5.4.yaml  llm.py
provider/: chatgpt_codex.py  chatgpt_codex.yaml
tests/: test_chatgpt_codex.py
