[project]
name = "dify-chatgpt-codex"
version = "0.5.0"
description = "ChatGPT Codex model plugin for Dify"
readme = "README.md"
requires-python = ">=3.12"

# uv pip compile pyproject.toml -o ./requirements.txt
dependencies = [
    "dify_plugin>=0.5.0",
    "tiktoken~=0.8.0",
    "openai~=2.3.0",
    "httpx~=0.28.1",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
